# win-wolume-server

./: README.md  WinVolumeServer.bat  main.py  main.spec  pyproject.toml  server.py
volume_scripts/: volumedown.js  volumemute.js  volumeup.js
