[tool.poetry]
name = "win-wolume-server"
version = "0.1.0"
description = ""
authors = ["mcmhav <mcmhav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-restx = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
